<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title_text"
        android:textSize="35sp"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"/>

    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/anon_login_button"
        android:textColor="@color/text"
        android:background="@drawable/gradient3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/top"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/anon_login_button_text"
        android:elevation="2dp"
        android:nextFocusForward="@+id/username"/>

    <View
        android:id="@+id/anon_end"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/anon_login_button"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Email"
        android:textAlignment="center"
        android:layout_below="@+id/anon_end"
        android:layout_marginTop="60dp"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@+id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:hint="Password"
        android:textAlignment="center"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:nextFocusForward="@+id/passwordConfirm"/>

    <EditText
        android:id="@+id/passwordConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:hint="Confirm Password"
        android:textAlignment="center"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:nextFocusForward="@+id/user_login_button"/>

    <Button
        android:id="@+id/user_login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordConfirm"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/gradient3"
        android:elevation="2dp"
        android:text="@string/user_login_button_text"
        android:textColor="@color/text"
        android:nextFocusForward="@+id/google_login_button"/>

</RelativeLayout>